Mon Oct  4 20:13:59 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/ccf_common.mpb:

          Removed the exceptions base project.

Sun Aug  2 18:27:35 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * CCF/CIDL/CIDL.mpc:
        * CCF/CodeGenerationKit/CodeGenerationKit.mpc:
        * CCF/CompilerElements/CompilerElements.mpc:
        * CCF/IDL2/IDL2.mpc:
        * CCF/IDL3/IDL3.mpc:
        * MPC:
        * MPC/config:
        * MPC/config/ccf_common.mpb:

          Switched the 'cidlc' base project to 'ccm_common' since CIDLC
          is disfunct and CCF is being used for more general purpose
          projects.